--- a/CS_183_HW3.ipynb
+++ b/CS_183_HW3.ipynb
@@ -757,7 +757,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 25,
       "metadata": {
         "id": "qozfEcX3dkC8"
       },
@@ -768,27 +768,30 @@
         "\ttotal_tokens = 0\n",
         "\n",
         "\tfor s in sentences:\n",
-        "\t\t\ttokens = str_to_tokens(s)\n",
-        "\t\t\tprefix = tokens_to_str([tokens[0]])\n",
-        "\t\t\trest  = tokens_to_str(tokens[1:])\n",
-        "\t\t\tseq_p = sequence_prob(prefix, rest, temperature)\n",
-        "\t\t\ttotal_neg_logprob += -np.log(max(seq_p, 1e-14))\n",
-        "\t\t\ttotal_tokens   += (len(tokens) - 1)\n",
+        "\t\ttokens = str_to_tokens(s)\n",
+        "\t\tif len(tokens) <= 1:\n",
+        "\t\t\t\tcontinue\n",
+        "\t\tprefix = [tokens[0]]\n",
+        "\t\tfor tok in tokens[1:]:\n",
+        "\t\t\t\tp = next_tok_prob(prefix, temperature)\n",
+        "\t\t\t\ttotal_neg_logprob += -np.log(max(float(p[tok]), 1e-14))\n",
+        "\t\t\t\tprefix.append(tok)\n",
+        "\t\ttotal_tokens += (len(tokens) - 1)\n",
         "\n",
         "\treturn float(np.exp(total_neg_logprob / total_tokens))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 26,
       "metadata": {
         "id": "NVi7XbsbdkC8"
       },
       "outputs": [],
       "source": [
         "# fill in your answers for the perplexity of the entire datasets here\n",
-        "perplexity_en = dataset_perplexity(english_sentences, 0.1)\n",
-        "perplexity_ru = dataset_perplexity(russian_sentences, 0.1)\n",
+        "perplexity_en = dataset_perplexity(english_sentences, 1.0)\n",
+        "perplexity_ru = dataset_perplexity(russian_sentences, 1.0)\n",
         "\n",
         "with open(\"results/perplexities.json\", \"w\") as f:\n",
         "\tjson.dump({\"en\": perplexity_en, \"ru\": perplexity_ru}, f)"
